# homer_mapnav_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: DetectObstacle.action  DriveTo.action
msg/: MapLayers.msg  ModifyMap.msg  ModifyPOI.msg  NavigateToPOI.msg  PointOfInterest.msg  PointsOfInterest.msg  RegionOfInterest.msg  RegionsOfInterest.msg  RoiChange.msg  StartNavigation.msg  TargetUnreachable.msg
srv/: AddPOI.srv  GetPointsOfInterest.srv  GetRegionOfInterestName.srv  GetRegionsOfInterest.srv  ModifyPOI.srv  PointInsideRois.srv  SaveMap.srv
