<package>
  <name>homer_mapnav_msgs</name>
  <version>0.1.8</version>
  <description> homer_mapnav_msgs contains the messages used for mapping and navigation
  </description>
  <maintainer email="vseib@uni-koblenz.de">Viktor Seib</maintainer>
  <author email="mknauf@uni-koblenz.de">Malte Knauf</author>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


